--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.parallel=true
 	loader_version=0.14.19
 
 # Mod Properties
-	mod_version = 1.1.0b
+	mod_version = 1.1.0
 	maven_group = stk.estecka
 	archives_base_name = AllDeathMessages
 
