--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.parallel=true
 	loader_version=0.14.19
 
 # Mod Properties
-	mod_version = 1.1.0
-	maven_group = stk.estecka
+	mod_version = 1.1.1
+	maven_group = tk.estecka
 	archives_base_name = AllDeathMessages
 
 # Dependencies
