--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.19
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
+loader_version=0.14.21
+
+#Fabric api
+fabric_version=0.83.0+1.20
 
 # Mod Properties
-	mod_version = 1.1.1
-	maven_group = tk.estecka
-	archives_base_name = AllDeathMessages
-
-# Dependencies
-	fabric_version=0.79.0+1.19.4
+mod_version = 1.2.0+1.20
+maven_group = tk.estecka
+archives_base_name = AllDeathMessages
