--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@ loader_version=0.14.21
 fabric_version=0.83.0+1.20
 
 # Mod Properties
-mod_version = 1.3-b.0+1.20
+mod_version = 1.3.0+1.20
 maven_group = tk.estecka
 archives_base_name = AllDeathMessages
