--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.19
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.2
+loader_version=0.14.19
+
+#Fabric api
+fabric_version=0.79.0+1.19.4
 
 # Mod Properties
-mod_version = 1.3.1+1.19.4
-maven_group = tk.estecka
+mod_version = 1.4.0
+maven_group = tk.estecka.alldeath
 archives_base_name = AllDeathMessages
-
-# Dependencies
-	fabric_version=0.79.0+1.19.4
