--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
+# check these on https://fabricmc.net/develop
 minecraft_version=1.19.4
 yarn_mappings=1.19.4+build.2
-loader_version=0.14.19
+loader_version=0.15.7
 
 #Fabric api
-fabric_version=0.79.0+1.19.4
+fabric_version=0.87.2+1.19.4
 
 # Mod Properties
-mod_version = 1.5.5
+mod_version = 1.5.6
 maven_group = tk.estecka.alldeath
 archives_base_name = AllDeathMessages
